# flutter_native_vulkan_experiment

./: README.md  pubspec.yaml  run-so-copy.sh
android/app/: CMakeLists.txt  build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/flutter_native_vulkan_experiment/: MainActivity.kt
ios/Classes/: native_add.cpp  native_submodule.cpp
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
native/: CMakeLists.txt  README.md
native/scripts/: bootstrap-android-ndk.sh  bootstrap-cmake.sh
test/: widget_test.dart
